Fixed occupant repositioning on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,3 @@
-:root {
-  --sky-blue-color: #7ad7f0;
-  --ghost-white-color: #f5fcff;
-}
-
 * {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
@@ -19,28 +14,6 @@ h2 {
   text-align: center;
 }
 
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: var(--ghost-white-color);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: var(--sky-blue-color);
-  /*color: black;*/
-}
-
 /* Style the content */
 .content {
   background-color: #ddd;
@@ -50,7 +23,7 @@ h2 {
 .contentMobile {
   background-color: #ddd;
   padding: 10px;
-  height: 1250px;
+  height: 1350px;
 }
 
 /* Style the footer */
@@ -128,8 +101,8 @@ h2 {
 
 #seat3Mobile {
   position: absolute;
-  top: calc(159px + 13px);
-  left: calc(162px - 31px);
+  top: calc(313px + 13px);
+  left: calc(178px - 31px);
   max-height: 10%;
 }
 
